--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -8,7 +8,13 @@
 }
 @font-face {
   font-family: roboto;
+  font-weight: 400;
   src: url("../fonts/Roboto/Roboto-Regular.ttf");
+}
+@font-face {
+  font-family: roboto;
+  font-weight: 700;
+  src: url("../fonts/Roboto/Roboto-Bold.ttf");
 }
 
 // Variables
@@ -27,7 +33,7 @@ $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
+$gray-600: #929292;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
@@ -51,14 +57,14 @@ $grays: map-merge(
 );
 
 
-$blue:    #007bff !default;
+$blue:    #0091ea;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #e52620;
-$orange:  #fd7e14 !default;
+$orange:  #feb30b;
 $yellow:  #ffc107 !default;
-$green:   #28a745 !default;
+$green:   #57bf02;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
@@ -83,11 +89,11 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
+$primary:       $red;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
+$info:          $blue;
+$warning:       $orange;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
