--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -6,6 +6,7 @@
  */
 
 @import "functions";
+@import "adwanted"; // Change this line to compile another theme
 @import "custom";
 @import "variables";
 @import "mixins";
