--- a/scss/mixins/_alert.scss
+++ b/scss/mixins/_alert.scss
@@ -1,13 +1,13 @@
 @mixin alert-variant($background, $border, $color) {
   color: $color;
-  @include gradient-bg($background);
-  border-color: $border;
+  // @include gradient-bg($background);
+  border-color: $color;
 
   hr {
     border-top-color: darken($border, 5%);
   }
 
   .alert-link {
-    color: darken($color, 10%);
+    color: $color;
   }
 }
