--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -4,13 +4,13 @@
 // and disabled options for all buttons
 
 @mixin button-variant($background, $border, $hover-background: darken($background, 7.5%), $hover-border: darken($border, 10%), $active-background: darken($background, 10%), $active-border: darken($border, 12.5%)) {
-  color: color-yiq($background);
+  color: $yiq-text-light;
   @include gradient-bg($background);
   border-color: $border;
   @include box-shadow($btn-box-shadow);
 
   @include hover {
-    color: color-yiq($hover-background);
+    color: $yiq-text-light;
     @include gradient-bg($hover-background);
     border-color: $hover-border;
   }
@@ -61,7 +61,7 @@
   border-color: $color;
 
   &:hover {
-    color: $color-hover;
+    color: $yiq-text-light;
     background-color: $active-background;
     border-color: $active-border;
   }
