--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -42,3 +42,7 @@
 @import "carousel";
 @import "utilities";
 @import "print";
+@import "fontawesome/fontawesome.scss";
+@import "fontawesome/solid.scss";
+@import "fontawesome/regular.scss";
+@import "fontawesome/brands.scss";
