--- a/scss/fontawesome/_mixins.scss
+++ b/scss/fontawesome/_mixins.scss
@@ -2,14 +2,14 @@
 // --------------------------
 
 @mixin fa-icon {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   display: inline-block;
   font-style: normal;
+  font-weight: 400;
   font-variant: normal;
-  font-weight: normal;
   line-height: 1;
   vertical-align: -.125em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @mixin fa-icon-rotate($degrees, $rotation) {
@@ -28,14 +28,14 @@
 // See: http://a11yproject.com/posts/how-to-hide-content/
 
 @mixin sr-only {
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
   position: absolute;
   width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
 
 // Use in conjunction with .sr-only to only display content when it's focused.
@@ -47,11 +47,11 @@
 @mixin sr-only-focusable {
   &:active,
   &:focus {
-    clip: auto;
+    position: static;
+    width: auto;
     height: auto;
     margin: 0;
     overflow: visible;
-    position: static;
-    width: auto;
+    clip: auto;
   }
 }
