--- a/scss/custom/_badge.scss
+++ b/scss/custom/_badge.scss
@@ -8,8 +8,10 @@
   padding: $badge-padding-y $badge-padding-x;
   font-size: $badge-font-size;
   font-weight: $badge-font-weight;
+  font-variant: small-caps;
   line-height: 1;
   text-align: center;
+  text-transform: lowercase;
   white-space: nowrap;
   vertical-align: baseline;
   @include border-radius($badge-border-radius);
