--- a/scss/custom/_buttons.scss
+++ b/scss/custom/_buttons.scss
@@ -46,6 +46,9 @@
       @include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
     }
   }
+  i {
+    margin-right: .25em;
+  }
 }
 
 // Future-proof disabling of clicks on `<a>` elements
